fixed aws chart for cluster-api

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfigTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfigTemplate.yaml
@@ -9,4 +9,4 @@ spec:
         nodeRegistration:
           kubeletExtraArgs:
             cloud-provider: external
-          name: '{{ ds.meta_data.local_hostname }}'
+          name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
