--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
@@ -15,16 +15,16 @@ spec:
       nodeRegistration:
         kubeletExtraArgs:
           cloud-provider: external
-        name: '{{ ds.meta_data.local_hostname }}'
+        name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
     joinConfiguration:
       nodeRegistration:
         kubeletExtraArgs:
           cloud-provider: external
-        name: '{{ ds.meta_data.local_hostname }}'
+        name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
   machineTemplate:
     infrastructureRef:
       apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
       kind: AWSMachineTemplate
       name: {{ .Values.global.clusterName }}-control-plane
-  replicas: {{ .Vales.aws.controlPlane.replicas }}
+  replicas: {{ .Values.aws.controlPlane.replicas }}
   version: {{ .Values.global.kubernetes.version }}
