another round of fixes aws chart for capi-cluster

--- a/argocd-helm-charts/capi-cluster/Chart.yaml
+++ b/argocd-helm-charts/capi-cluster/Chart.yaml
@@ -8,3 +8,7 @@ dependencies:
     version: 1.0.0
     repository: 'file://charts/hetzner'
     condition: provider.hetzner
+  - name: aws
+    version: 1.0.0
+    repository: 'file://charts/aws'
+    condition: provider.aws
