changed the helmchartproxy metadata.name, so it can be unique to each cluster

--- a/argocd-helm-charts/capi-cluster/templates/ccm.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: ccm-hetzner
+  name: ccm-hetzner-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
