--- a/argocd-helm-charts/capi-cluster/templates/cilium.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/cilium.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: cilium
+  name: cilium-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
