--- a/argocd-helm-charts/capi-cluster/templates/sealed-secrets.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/sealed-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: sealed-secerts
+  name: sealed-secerts-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
