--- a/argocd-helm-charts/capi-cluster/templates/argo-cd.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/argo-cd.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: argo-cd
+  name: argo-cd-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
