--- a/argocd-helm-charts/capi-cluster/templates/cert-manager.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/cert-manager.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: cert-manager
+  name: cert-manager-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
