--- a/argocd-helm-charts/capi-cluster/templates/cluster-api.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/cluster-api.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
-  name: cluster-api
+  name: cluster-api-{{ .Values.global.clusterName }}
 spec:
   clusterSelector:
     matchLabels:
