added more option to awscluster spec

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
@@ -7,3 +7,9 @@ metadata:
 spec:
   region: {{ .Values.region }}
   sshKeyName: {{ .Values.sshKeyName }}
+  bastion: {{ .Values.bastion }}
+  networkSpec:
+    vpc:
+      cidrBlock: {{ .Values.vpc.cidrBlock }}
+  controlPlaneLoadBalancer:
+    loadBalancerType: {{ .Values.controlPlane.loadBalancerType }}
