--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -9,4 +9,10 @@ spec:
     name: capi-cluster-token
     namespace: capi-cluster-{{ .Values.global.customerid }}
   version: {{ .Values.aws.capaVersion }}
+  manager:
+    metrics:
+      bindAddress: ":8181"
+    syncPeriod: "500s"
+  fetchConfig:
+    url: https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases
 {{- end }}
