fixed bastion option

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   region: {{ .Values.region }}
   sshKeyName: {{ .Values.sshKeyName }}
-  bastion: {{ .Values.bastion }}
+  bastion: {{ toYaml .Values.bastion | nindent 4 }}
   networkSpec:
     vpc:
       cidrBlock: {{ .Values.vpc.cidrBlock }}
