--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
@@ -8,7 +8,7 @@ spec:
   region: {{ .Values.region }}
   sshKeyName: {{ .Values.sshKeyName }}
   bastion: {{ toYaml .Values.bastion | nindent 4 }}
-  networkSpec:
+  network:
     vpc:
       cidrBlock: {{ .Values.vpc.cidrBlock }}
   controlPlaneLoadBalancer:
