--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachineTemplate.yaml
@@ -5,14 +5,14 @@ metadata:
 spec:
   template:
     spec:
-      iamInstanceProfile: nodes.cluster-api-provider-aws.sigs.k8s.io
+      iamInstanceProfile: control-plane.cluster-api-provider-aws.sigs.k8s.io
       instanceType: {{ .Values.controlPlane.instanceType }}
       sshKeyName: {{ .Values.controlPlane.sshKeyName }}
       imageLookupBaseOS: ubuntu-20.04
       publicIP: false
-      ami:
-        id: ami-03cd26c84ae9a587c
+      ami: {{ toYaml .Values.controlPlane.ami | nindent 6 }}
 
+{{- if (not (.Values.workerNodes).autoScaler) }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: AWSMachineTemplate
@@ -26,5 +26,5 @@ spec:
       sshKeyName: {{ .Values.workerNodes.sshKeyName }}
       imageLookupBaseOS: ubuntu-20.04
       publicIP: false
-      ami:
-        id: ami-03cd26c84ae9a587c
+      ami: {{ toYaml .Values.workerNodes.ami | nindent 6 }}
+{{- end }}
