--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfigTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfigTemplate.yaml
@@ -1,12 +1,14 @@
+{{- if (not (.Values.workerNodes).autoScaler) }}
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: {{ .Values.global.clusterName }}-md-0
+  name: {{ .Values.global.clusterName }}
 spec:
   template:
     spec:
       joinConfiguration:
         nodeRegistration:
           kubeletExtraArgs:
-            cloud-provider: external
+            cloud-provider: aws
           name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
+{{- end }}
