--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineHealthCheck
 metadata:
-  name: {{ .Values.global.clusterName }}-kcp-unhealthy"
+  name: {{ .Values.global.clusterName }}-kcp-unhealthy
 spec:
   clusterName: {{ .Values.global.clusterName }}
   maxUnhealthy: 100%
