--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
@@ -11,7 +11,7 @@ spec:
   unhealthyConditions:
     - type: Ready
       status: Unknown
-      timeout: 300s
+      timeout: 5m0s
     - type: Ready
       status: "False"
-      timeout: 300s
+      timeout: 5m0s
