--- a/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
@@ -1,7 +1,11 @@
 workerNodes:
   autoScaler: true
+  maxSize: 3
+  minSize: 1
   ami:
     id: ami-03cd26c84ae9a587c
+  publicIP: false
 controlPlane:
   ami:
     id: ami-03cd26c84ae9a587c
+  publicIP: true
