fixed yaml indentation

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   clusterName: {{ .Values.global.clusterName }}
   replicas: {{ .Values.workerNodes.replicas }}
+  selector:
+    matchLabels: null
   template:
     spec:
       bootstrap:
