--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
@@ -7,7 +7,8 @@ spec:
   clusterName: {{ .Values.global.clusterName }}
   replicas: {{ .Values.workerNodes.replicas }}
   selector:
-    matchLabels: null
+    matchLabels:
+      cluster.x-k8s.io/cluster-name: {{ .Values.global.clusterName }}
   template:
     spec:
       bootstrap:
