--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
@@ -1,4 +1,4 @@
-{{- if (.Values.workerNodes).autoScaler }}
+{{- if (.Values.global.capa).autoScaler }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: AWSMachinePool
 metadata:
