--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
@@ -1,4 +1,4 @@
-{{- if (not (.Values.workerNodes).autoScaler) }}
+{{- if (not (.Values.global.capa).autoScaler) }}
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
 metadata:
