--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -1,4 +1,4 @@
-{{- if (.Values.workerNodes).autoScaler }}
+{{- if (.Values.global.capa).autoScaler }}
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachinePool
 metadata:
