--- a/argocd-helm-charts/capi-cluster/templates/argo-cd.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/argo-cd.yaml
@@ -21,5 +21,5 @@ spec:
       repositories:
         kubeaid-repo:
           name: kubeaid
-          type: {{ .Values.cluster.kubeaid.type }}
-          url: {{ .Values.cluster.kubeaid.repo }}
+          type: {{ .Values.global.kubeaid.type | default "git" }}
+          url: {{ .Values.global.kubeaid.repo }}
