--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.aws }}
+{{- if (.Values.provider).aws }}
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
@@ -17,5 +17,5 @@ spec:
     url: https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases/{{ .Values.aws.capaVersion }}/infrastructure-components.yaml
   manager:
     featureGates:
-      MachinePool: {{ .Values.workerNodes.autoScaler }}
+      MachinePool: {{ .Values.global.capa.autoScaler }}
 {{- end }}
