Revert "fixed matchlabels for machine deploy/pool"
This reverts commit 720ffab6e3973ec460ce3a056858451f60e69742.

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: {{ .Values.workerNodes.replicas }}
   selector:
     matchLabels:
-      cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
+      cluster.x-k8s.io/cluster-name: {{ .Values.global.clusterName }}
   template:
     spec:
       bootstrap:
