--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
@@ -7,7 +7,9 @@ spec:
   minSize: {{ .Values.workerNodes.minSize | default 1 }}
   maxSize: {{ .Values.workerNodes.maxSize | default 3 }}
   awsLaunchTemplate:
+    ami: {{ toYaml .Values.workerNodes.ami | nindent 8 }}
     iamInstanceProfile: nodes.cluster-api-provider-aws.sigs.k8s.io
     instanceType: {{ .Values.workerNodes.instanceType }}
     sshKeyName: {{ .Values.workerNodes.sshKeyName }}
+    imageLookupBaseOS: ubuntu-20.04
 {{- end }}
