fixed helm chart installation for diff cloud provider

--- a/argocd-helm-charts/capi-cluster/templates/ccm-hetzner.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm-hetzner.yaml
@@ -1,3 +1,4 @@
+{{- if (.Values.provider).hetzner }}
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
@@ -20,3 +21,4 @@ spec:
   valuesTemplate: |
     privateNetwork:
       enabled: false
+{{- end }}
