fixed ccm aws values entry for capi-cluster
otherwise ccm-aws will fail with this error

│ I0524 04:51:19.697552       1 aws.go:872] Setting up informers for Cloud                                                                 │
│ I0524 04:51:19.697592       1 controllermanager.go:319] Starting "service-lb-controller"                                                 │
│ I0524 04:51:19.698017       1 controllermanager.go:338] Started "service-lb-controller"                                                  │
│ I0524 04:51:19.698142       1 controllermanager.go:319] Starting "node-route-controller"                                                 │
│ E0524 04:51:19.698164       1 controllermanager.go:322] Error starting "node-route-controller"                                           │
│ F0524 04:51:19.698170       1 controllermanager.go:224] error running controllers: invalid CIDR[0]: <nil> (invalid CIDR address: )

--- a/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
@@ -20,5 +20,10 @@ spec:
       createNamespace: true
   valuesTemplate: |
     image:
-        tag: v1.30.0
+      tag: v1.30.0
+    args:
+      - --v=2
+      - --cloud-provider=aws
+      - --use-service-account-credentials=true
+      - --configure-cloud-routes=false
 {{- end }}
