added namespace for ccm-aws, since default is kube-system and kubeaid **will**(not yet added) default to aws

--- a/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
@@ -19,6 +19,7 @@ spec:
     install:
       createNamespace: true
   valuesTemplate: |
+    namespace: aws
     image:
       tag: v1.30.0
     args:
