--- a/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
@@ -9,17 +9,15 @@ spec:
       cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
   repoURL: https://kubernetes.github.io/cloud-provider-aws
   chartName: aws-cloud-controller-manager
-  namespace: aws
+  namespace: kube-system
   releaseName: aws-cloud-controller-manager
   version: 0.0.8
   options:
     waitForJobs: true
     wait: true
     timeout: 5m0s
-    install:
-      createNamespace: true
   valuesTemplate: |
-    namespace: aws
+    namespace: kube-system
     image:
       tag: v1.30.0
     args:
