--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/Cluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/Cluster.yaml
@@ -2,6 +2,7 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   name: {{ .Values.global.clusterName }}
+  namespace: capi-cluster-{{ .Values.global.customerid }}
   labels:
     cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
 spec:
