--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
@@ -3,6 +3,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: HetznerBareMetalMachineTemplate
 metadata:
   name: {{ .Values.global.clusterName }}-control-plane
+  namespace: capi-cluster-{{ .Values.global.customerid }}
 spec:
   template:
     spec:
