--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
@@ -3,6 +3,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: HetznerCluster
 metadata:
   name: {{ .Values.global.clusterName }}
+  namespace: capi-cluster-{{ .Values.global.customerid }}
   labels:
     cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
 spec:
