--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmConfigTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmConfigTemplate.yaml
@@ -3,6 +3,7 @@ apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
   name: {{ .Values.global.clusterName }}-md-0
+  namespace: capi-cluster-{{ .Values.global.customerid }}
 spec:
   template:
     spec:
