--- a/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/ccm-aws.yaml
@@ -3,6 +3,7 @@ apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
   name: ccm-aws-{{ .Values.global.clusterName }}
+  namespace: capi-cluster-{{ .Values.global.customerid }}
 spec:
   clusterSelector:
     matchLabels:
