--- a/argocd-helm-charts/capi-cluster/templates/cert-manager.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/cert-manager.yaml
@@ -2,6 +2,7 @@ apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
   name: cert-manager-{{ .Values.global.clusterName }}
+  namespace: capi-cluster-{{ .Values.global.customerid }}
 spec:
   clusterSelector:
     matchLabels:
