fixed the secret name for hetzner capi-cluster

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
@@ -31,7 +31,7 @@ spec:
       hcloudToken: hcloud
       hetznerRobotPassword: robot-password
       hetznerRobotUser: robot-user
-    name: hetzner
+    name: capi-cluster-hetzner
   sshKeys:
     hcloud:
     - name: cluster
