Using KubeadmConfig for MachinePool and KubeadmConfigTemplate for MachineDeployment
Signed-off-by: Archisman Mridha <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -11,7 +11,7 @@ spec:
       bootstrap:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
-          kind: KubeadmConfigTemplate
+          kind: KubeadmConfig
           name: {{ .Values.global.clusterName }}
       clusterName: {{ .Values.global.clusterName }}
       infrastructureRef:
