--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
@@ -30,9 +30,32 @@ spec:
           size: 20G
         postInstallScript: |
           #!/bin/bash
+          # NOTE: it will create problem, if there are 2 interface which are UP
+          # but lets handle it later
+          interface_name=$(ip link show | grep 'UP mode' | awk '{print $2}' | cut -d ':' -f1 )
+          touch /etc/netplan/60-floating-ip.yaml
+          cat << EOT > /etc/netplan/60-floating-ip.yaml
+          # Floating IP from Hetzner
+          network:
+            version: 2
+            renderer: networkd
+            ethernets:
+              $interface_name:
+                addresses:
+                - {{ .Values.controlPlaneEndpoint.host }}/32
+          EOT
+          netplan apply /etc/netplan/60-floating-ip.yaml
           mkdir -p /etc/cloud/cloud.cfg.d && touch /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           echo "network: { config: disabled }" > /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           apt-get update && apt-get install -y cloud-init apparmor apparmor-utils
+          cat << EOT > /etc/cloud/cloud.cfg.d/99-admin-ssh-keys.cfg
+          users:
+            - name: root
+              ssh_authorized_keys:
+              {{- range .Values.global.sshKeys }}
+               - {{ . }}
+              {{- end }}
+          EOT
           cloud-init clean --logs
       sshSpec:
         portAfterCloudInit: 22
