--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
@@ -30,11 +30,10 @@ spec:
           size: 20G
         postInstallScript: |
           #!/bin/bash
-          # NOTE: it will create problem, if there are 2 interface which are UP
-          # but lets handle it later
-          interface_name=$(ip link show | grep 'UP mode' | awk '{print $2}' | cut -d ':' -f1 )
-          touch /etc/netplan/60-floating-ip.yaml
-          chmod 600 /etc/netplan/60-floating-ip.yaml
+          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          chmod a+x /usr/local/bin/yq
+          touch /etc/netplan/60-floating-ip.yaml && chmod 600 /etc/netplan/60-floating-ip.yaml
+          interface_name=$(/usr/local/bin/yq '.network.ethernets.[] | key' /etc/netplan/01-netcfg.yaml)
           cat << EOT > /etc/netplan/60-floating-ip.yaml
           # Floating IP from Hetzner
           network:
