setup floating ip only when its a robot bare metal

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
@@ -30,20 +30,23 @@ spec:
           size: 20G
         postInstallScript: |
           #!/bin/bash
-          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          chmod a+x /usr/local/bin/yq
-          touch /etc/netplan/60-floating-ip.yaml && chmod 600 /etc/netplan/60-floating-ip.yaml
-          interface_name=$(/usr/local/bin/yq '.network.ethernets.[] | key' /etc/netplan/01-netcfg.yaml)
-          cat << EOT > /etc/netplan/60-floating-ip.yaml
-          # Floating IP from Hetzner
-          network:
-            version: 2
-            renderer: networkd
-            ethernets:
-              $interface_name:
-                addresses:
-                - {{ .Values.controlPlaneEndpoint.host }}/32
-          EOT
+          ROBOT_FLOATING={{ .Values.robot.floating }}
+          if $ROBOT_FLOATING; then
+            wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+            chmod a+x /usr/local/bin/yq
+            touch /etc/netplan/60-floating-ip.yaml && chmod 600 /etc/netplan/60-floating-ip.yaml
+            interface_name=$(/usr/local/bin/yq '.network.ethernets.[] | key' /etc/netplan/01-netcfg.yaml)
+            cat << EOT > /etc/netplan/60-floating-ip.yaml
+            # Floating IP from Hetzner
+            network:
+              version: 2
+              renderer: networkd
+              ethernets:
+                $interface_name:
+                  addresses:
+                  - {{ .Values.controlPlaneEndpoint.host }}/32
+            EOT
+          fi
           mkdir -p /etc/cloud/cloud.cfg.d && touch /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           echo "network: { config: disabled }" > /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           apt-get update && apt-get install -y cloud-init apparmor apparmor-utils
