update value files of charts to set revisionHistoryLimit to 0

--- a/.gitea/workflows/container-image.yaml
+++ b/.gitea/workflows/container-image.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   docker-image-build-pull-request:
-    runs-on: ubuntu-22.04-bantha
+    runs-on: ubuntu-22.04-htzhel1-ax42-a
     uses: Obmondo/gitea-actions/.gitea/workflows/build-image.yaml@main
     with:
       push: true
