--- a/argocd-helm-charts/cert-manager/values.yaml
+++ b/argocd-helm-charts/cert-manager/values.yaml
@@ -6,6 +6,7 @@ cert-manager:
   global:
     leaderElection:
       namespace: cert-manager
+    revisionHistoryLimit: 0
   prometheus:
     enabled: true
     servicemonitor:
