--- a/argocd-helm-charts/traefik/values.yaml
+++ b/argocd-helm-charts/traefik/values.yaml
@@ -17,6 +17,7 @@ traefik:
   globalArguments: []
   deployment:
     replicas: 2
+    revisionHistoryLimit: "0"
   logs:
     access:
       enabled: true
