disable teleport default secret creation

--- a/argocd-helm-charts/teleport-kube-agent/values.yaml
+++ b/argocd-helm-charts/teleport-kube-agent/values.yaml
@@ -8,3 +8,6 @@ teleport-kube-agent:
     requests:
       cpu: 10m
       memory: 128Mi
+  joinTokenSecret:
+    create: false
+    name: teleport-kube-agent-join-token
