--- a/argocd-helm-charts/cert-manager/templates/issuer.yaml
+++ b/argocd-helm-charts/cert-manager/templates/issuer.yaml
@@ -2,7 +2,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt
+  name: {{ .Values.issuer.name }}
 spec:
   acme:
     email: {{ .Values.issuer.issuerEmail }}
