[CI] Helm Chart Update aws-efs-csi-driver

--- a/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/node-daemonset.yaml
+++ b/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/node-daemonset.yaml
@@ -5,6 +5,9 @@ metadata:
   name: efs-csi-node
   labels:
     app.kubernetes.io/name: {{ include "aws-efs-csi-driver.name" . }}
+    {{- with .Values.node.additionalLabels }}
+    {{ toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   selector:
     matchLabels:
