--- a/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/values.yaml
+++ b/argocd-helm-charts/aws-efs-csi-driver/charts/aws-efs-csi-driver/values.yaml
@@ -11,7 +11,7 @@ useFIPS: false
 
 image:
   repository: public.ecr.aws/efs-csi-driver/amazon/aws-efs-csi-driver
-  tag: "v2.0.5"
+  tag: "v2.0.6"
   pullPolicy: IfNotPresent
 
 sidecars:
@@ -144,6 +144,7 @@ node:
     #     - 169.254.169.253
   podLabels: {}
   podAnnotations: {}
+  additionalLabels: {}
   resources:
     {}
     # limits:
